# GeniusStockAIQuant

./: .env.example  .gitignore  README.md  README_CN.md  README_EN.md  TREND_STRATEGY_README.md  parse_models.py  pyproject.toml  requirements.txt
config/: strategy_config.json
docs/: README.md  UPDATE_SUMMARY.md  database-complete-column-reference.md  database-data-dictionary.md  database-postgres-en.md  database-postgres.md  database-schema-guide.md  fin_store_complete_schema.sql  fin_store_schema_with_comments.sql
scripts/: example_ma_from_db.py  ping_db.py  trend_strategy_backtest.py
sql/: create_readonly_user.sql
src/genius_stock_aiquant/: __init__.py  data_loader.py  stock_selector.py
src/genius_stock_aiquant/backtest/: __init__.py  backtest_engine.py  metrics.py
src/genius_stock_aiquant/data_sources/: __init__.py  postgres.py
src/genius_stock_aiquant/strategy/: __init__.py  base.py  data_adapter.py  leader_strategy.py  limit_strategy.py  models.py  portfolio_manager.py  trend_strategy.py
src/genius_stock_aiquant/utils/: __init__.py
tests/: test_imports.py  test_postgres_loader.py  test_trend_strategy.py
